--- a/src/FullBanner/style.css
+++ b/src/FullBanner/style.css
@@ -1,7 +1,7 @@
 section.fullbanner-box {
   position: relative;
   display: flex;
-  background: var(--bg-banner-color);
+  background: var(--main-red-color);
   height: 600px;
   align-items: center;
 }
@@ -33,6 +33,8 @@ section.fullbanner-box .container {
   flex-direction: column;
   flex: 1;
   justify-content: flex-end;
+  align-items: center;
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -58,6 +60,6 @@ section.fullbanner-box .container .message h1 {
 }
 
 section.fullbanner-box .container .message h2 {
-  font-size: 1em;
+  font-size: 1.4em;
   font-weight: 400;
 }
