--- a/src/MainHeader/style.css
+++ b/src/MainHeader/style.css
@@ -1,6 +1,8 @@
 header.main-header {
+  position: absolute;
   display: flex;
-  background: #000;
+  width: 100%;
+  z-index: 100;
 }
 
 header.main-header .container {
@@ -54,13 +56,14 @@ header.main-header .container ul li a {
   text-decoration: none;
   color: white;
   text-transform: uppercase;
+  font-size: 0.9em;
   font-weight: 500;
   letter-spacing: 0.05em;
   transition: 0.3s;
 }
 
 header.main-header .container ul li a:hover {
-  color: var(--main-red-color);
+  color: black;
 }
 
 header.main-header .container ul li:first-child {
