--- a/src/MainHeader/style.css
+++ b/src/MainHeader/style.css
@@ -30,6 +30,15 @@ header.main-header .container img {
   }
 }
 
+@media screen and (max-width: 768px) {
+  header.main-header .container .top-area {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
 header.main-header .container ul {
   display: flex;
   list-style: none;
@@ -85,6 +94,11 @@ header.main-header .container .menu.open {
   visibility: visible;
   opacity: 1;
   height: auto;
+  background: rgba(0, 0, 0, 0.95);
+  width: 100%;
+  padding-top: 15px;
+  border-radius: 10px;
+  margin-top: -12px;
 }
 
 @media screen and (min-width: 768px) {
